Fix for z-index issue on language menu mobile view (was hidden by galleria tagline)

--- a/src/main/webapp/themes/default/css/header.css
+++ b/src/main/webapp/themes/default/css/header.css
@@ -366,7 +366,7 @@ table tr:first-child{
 #lang-menu{
 	position:		relative;
 	float:			right;
-	z-index:		3;	
+	z-index:		11;	
 	margin-right:	0 !important;
 	white-space:	nowrap;
 	padding-left:	1em;
